Version 0.11.9
* fixed CSS not imported issue (reported by littlegirl, found by M.Ellison,akazia)
* fixed corruption on save issue

Version 0.11.8 (legolas558) released 2010-04-21
* fixed loading overlay not hidden when changing debug mode
* fixed deleted WoaS namespace from reserved list

Version 0.11.7 (legolas558) released 2010-04-20
* added foldable listing options
* keep log area scrolled to bottom (suggested by S.Tunis)
* WSIF datasource mode implemented

Version 0.11.6 (legolas558) released 2010-04-16
* lot of fixes for active Safari support
* fixed saving issue on IE browsers (found by Akazia,deroock)

Version 0.11.5 (legolas558) released 2010-04-15
* fixed nowiki newline bug
* fixed custom scripts bug
* fixed Safari/Chrome CSS issues

Version 0.11.4 (legolas558) released 2010-04-14
* fixed import issue
* renamed CSS classes: wiki_toc -> woas_toc, wiki_toc_title -> woas_toc_title, embedded -> woas_embedded
* foldable namespace listing is now collapsed by default

Version 0.11.3 (legolas558) released 2010-04-14
* updated documentation to reflect CSS changes
* improved remember history option (pvhl,legolas558)
* logo fixes for IE (pvhl)
* optimization for CSS during save operation
* disable import features when WoaS is read-only
* allow IE8 features when useragent tells it is IE6 (deroock)
* editable reserved pages not shown in Special::Recentchanges (reported by deroock)
* fixed direct WoaS import failure (found by littlegirl)

Version 0.11.2 (legolas558,pvhl) released 2010-04-12
* prospected WSIF datasource options
* fixed main page auto-override bug
* fixed 'Special::Go to' glitches
* fixed double-edit bug when editing some special pages
* added background color for core pages
* fixed bug which allowed deletion of reserved pages
* renamed all CSS classes to have 'woas_' prefix
* implemented safe mode option
* fixed native WSIF mode when running from webserver
* fixed issue 2980936 namespaces not being transcluded (reported by littlegirl)